--- a/moe_experiment.ipynb
+++ b/moe_experiment.ipynb
@@ -40,19 +40,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "12748461",
+   "execution_count": 3,
+   "id": "7c67cfd7",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/doluk/.conda/envs/prag/lib/python3.10/site-packages/accelerate/utils/modeling.py:1593: UserWarning: Current model requires 939531264 bytes of buffer for offloaded layers, which seems does not fit any GPU's remaining memory. If you are experiencing a OOM later, please consider using offload_buffers=True.\n",
-      "  warnings.warn(\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "import torch\n",
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "12748461",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model, tokenizer, config = get_model(model_name=\"qwen2.5-1.5b-instruct\")"
    ]
@@ -1110,9 +1123,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prag",
+   "display_name": "Python (prag)",
    "language": "python",
-   "name": "python3"
+   "name": "prag"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1124,7 +1137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
