WIP: hydra MoE architecture experiments

--- a/moe_experiment.ipynb
+++ b/moe_experiment.ipynb
@@ -10,6 +10,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "5a0b333e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: line 1: nvidia-smi: command not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "416fb943",
    "metadata": {},
@@ -1123,9 +1141,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (prag)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "prag"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
