Update metrics collectionn for MoE and continous training for long epochs and dual inference

--- a/collect_metrics.ipynb
+++ b/collect_metrics.ipynb
@@ -193,134 +193,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "bc77b082",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'label': 'hotpotqa/comparison/prag',\n",
-       "  'result_path': 'qwen2.5-1.5b-instruct/rank=4_alpha=32/hotpotqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/prag/comparison/result.txt',\n",
-       "  'metrics': {'EM': '0.4167',\n",
-       "   'F1': '0.5145',\n",
-       "   'PREC': '0.5367',\n",
-       "   'RECALL': '0.5219'},\n",
-       "  'pred_check': ''},\n",
-       " {'label': 'hotpotqa/total/prag',\n",
-       "  'result_path': 'qwen2.5-1.5b-instruct/rank=4_alpha=32/hotpotqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/prag/bridge/result.txt',\n",
-       "  'metrics': {'EM': '0.0933',\n",
-       "   'F1': '0.1511',\n",
-       "   'PREC': '0.1602',\n",
-       "   'RECALL': '0.151'},\n",
-       "  'pred_check': ''},\n",
-       " {'label': 'hotpotqa/comparison/combine',\n",
-       "  'result_path': 'qwen2.5-1.5b-instruct/rank=4_alpha=32/hotpotqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/combine/comparison/result.txt',\n",
-       "  'metrics': {'EM': '0.44',\n",
-       "   'F1': '0.5313',\n",
-       "   'PREC': '0.5616',\n",
-       "   'RECALL': '0.5266'},\n",
-       "  'pred_check': ''},\n",
-       " {'label': 'hotpotqa/total/combine',\n",
-       "  'result_path': 'qwen2.5-1.5b-instruct/rank=4_alpha=32/hotpotqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/combine/bridge/result.txt',\n",
-       "  'metrics': {'EM': '0.1733',\n",
-       "   'F1': '0.2733',\n",
-       "   'PREC': '0.2867',\n",
-       "   'RECALL': '0.2784'},\n",
-       "  'pred_check': ''},\n",
-       " {'label': 'popqa/total/combine',\n",
-       "  'result_path': 'qwen2.5-1.5b-instruct/rank=4_alpha=32/popqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/combine/total/result.txt',\n",
-       "  'metrics': {'EM': '0.1667',\n",
-       "   'F1': '0.2673',\n",
-       "   'PREC': '0.2371',\n",
-       "   'RECALL': '0.3983'},\n",
-       "  'pred_check': ''},\n",
-       " {'label': 'popqa/total/prag',\n",
-       "  'result_path': 'qwen2.5-1.5b-instruct/rank=4_alpha=32/popqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/prag/total/result.txt',\n",
-       "  'metrics': {'EM': '0.2067',\n",
-       "   'F1': '0.2443',\n",
-       "   'PREC': '0.2344',\n",
-       "   'RECALL': '0.305'},\n",
-       "  'pred_check': ''},\n",
-       " {'label': 'complexwebquestions/total/prag',\n",
-       "  'result_path': 'qwen2.5-1.5b-instruct/rank=4_alpha=32/complexwebquestions/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/prag/total/result.txt',\n",
-       "  'metrics': {'EM': '0.3',\n",
-       "   'F1': '0.4106',\n",
-       "   'PREC': '0.4181',\n",
-       "   'RECALL': '0.4406'},\n",
-       "  'pred_check': ''},\n",
-       " {'label': 'complexwebquestions/total/combine',\n",
-       "  'result_path': 'qwen2.5-1.5b-instruct/rank=4_alpha=32/complexwebquestions/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/combine/total/result.txt',\n",
-       "  'metrics': {'EM': '0.29',\n",
-       "   'F1': '0.3901',\n",
-       "   'PREC': '0.4078',\n",
-       "   'RECALL': '0.4086'},\n",
-       "  'pred_check': ''},\n",
-       " {'label': '2wikimultihopqa/inference/combine',\n",
-       "  'result_path': 'qwen2.5-1.5b-instruct/rank=4_alpha=32/2wikimultihopqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/combine/inference/result.txt',\n",
-       "  'metrics': {'EM': '0.04',\n",
-       "   'F1': '0.2425',\n",
-       "   'PREC': '0.2801',\n",
-       "   'RECALL': '0.2365'},\n",
-       "  'pred_check': ''},\n",
-       " {'label': '2wikimultihopqa/bridge_comp/combine',\n",
-       "  'result_path': 'qwen2.5-1.5b-instruct/rank=4_alpha=32/2wikimultihopqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/combine/bridge_comparison/result.txt',\n",
-       "  'metrics': {'EM': '0.3833',\n",
-       "   'F1': '0.4078',\n",
-       "   'PREC': '0.4132',\n",
-       "   'RECALL': '0.4097'},\n",
-       "  'pred_check': ''},\n",
-       " {'label': '2wikimultihopqa/compositional/combine',\n",
-       "  'result_path': 'qwen2.5-1.5b-instruct/rank=4_alpha=32/2wikimultihopqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/combine/compositional/result.txt',\n",
-       "  'metrics': {'EM': '0.06',\n",
-       "   'F1': '0.115',\n",
-       "   'PREC': '0.1262',\n",
-       "   'RECALL': '0.1199'},\n",
-       "  'pred_check': ''},\n",
-       " {'label': '2wikimultihopqa/comparison/combine',\n",
-       "  'result_path': 'qwen2.5-1.5b-instruct/rank=4_alpha=32/2wikimultihopqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/combine/comparison/result.txt',\n",
-       "  'metrics': {'EM': '0.4133',\n",
-       "   'F1': '0.4403',\n",
-       "   'PREC': '0.4385',\n",
-       "   'RECALL': '0.4503'},\n",
-       "  'pred_check': ''},\n",
-       " {'label': '2wikimultihopqa/inference/prag',\n",
-       "  'result_path': 'qwen2.5-1.5b-instruct/rank=4_alpha=32/2wikimultihopqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/prag/inference/result.txt',\n",
-       "  'metrics': {'EM': '0.0167',\n",
-       "   'F1': '0.1749',\n",
-       "   'PREC': '0.1893',\n",
-       "   'RECALL': '0.1821'},\n",
-       "  'pred_check': ''},\n",
-       " {'label': '2wikimultihopqa/comparison/prag',\n",
-       "  'result_path': 'qwen2.5-1.5b-instruct/rank=4_alpha=32/2wikimultihopqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/prag/comparison/result.txt',\n",
-       "  'metrics': {'EM': '0.3867',\n",
-       "   'F1': '0.443',\n",
-       "   'PREC': '0.4323',\n",
-       "   'RECALL': '0.4721'},\n",
-       "  'pred_check': ''},\n",
-       " {'label': '2wikimultihopqa/bridge_comp/prag',\n",
-       "  'result_path': 'qwen2.5-1.5b-instruct/rank=4_alpha=32/2wikimultihopqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/prag/bridge_comparison/result.txt',\n",
-       "  'metrics': {'EM': '0.3567',\n",
-       "   'F1': '0.39',\n",
-       "   'PREC': '0.3929',\n",
-       "   'RECALL': '0.3972'},\n",
-       "  'pred_check': ''},\n",
-       " {'label': '2wikimultihopqa/compositional/prag',\n",
-       "  'result_path': 'qwen2.5-1.5b-instruct/rank=4_alpha=32/2wikimultihopqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/prag/compositional/result.txt',\n",
-       "  'metrics': {'EM': '0.0133',\n",
-       "   'F1': '0.0605',\n",
-       "   'PREC': '0.0672',\n",
-       "   'RECALL': '0.0643'},\n",
-       "  'pred_check': ''}]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Errno 2] No such file or directory: '/scratch/doluk/Compact-Interference-PRAG/output/moe/qwen2.5-1.5b-instruct/rank=16_alpha=32/popqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/post_train_epochs=20/lr=0.0003_direct/prag/total/result.txt'\n"
+     ]
     }
    ],
    "source": [
-    "groups[(4,4)]"
+    "import re\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def parse_result_txt(result_path: Path):\n",
+    "    text = result_path.read_text()\n",
+    "    results = {}\n",
+    "    current_epoch = None\n",
+    "\n",
+    "    for line in text.splitlines():\n",
+    "        line = line.strip()\n",
+    "        if not line:\n",
+    "            continue\n",
+    "\n",
+    "        # Epoch line\n",
+    "        m_epoch = re.match(r\"Epoch\\s+(\\d+)\", line)\n",
+    "        if m_epoch:\n",
+    "            current_epoch = int(m_epoch.group(1))\n",
+    "            results[current_epoch] = {}\n",
+    "            continue\n",
+    "\n",
+    "        # Metric line\n",
+    "        m_metric = re.match(r\"(em|f1|prec|recall)\\s+([0-9.]+)\", line)\n",
+    "        if m_metric and current_epoch is not None:\n",
+    "            metric, value = m_metric.groups()\n",
+    "            results[current_epoch][metric] = float(value)\n",
+    "\n",
+    "    return results\n",
+    "from pathlib import Path\n",
+    "\n",
+    "full_results = {}\n",
+    "for lora_rank in [2, 4, 8, 16]:\n",
+    "    for epoch in [2, 4]:\n",
+    "        result_path = Path(\n",
+    "            \"/scratch/doluk/Compact-Interference-PRAG/output/moe/qwen2.5-1.5b-instruct/\"\n",
+    "            f\"rank={lora_rank}_alpha=32/popqa/lr=0.0003_epoch={epoch}_direct/\"\n",
+    "            \"aug_model=qwen2.5-1.5b-instruct/post_train_epochs=20/\"\n",
+    "            \"lr=0.0003_direct/prag/total/result.txt\"\n",
+    "        )\n",
+    "        try:\n",
+    "            results = parse_result_txt(result_path)\n",
+    "            full_results[(lora_rank, epoch)]=results\n",
+    "        except FileNotFoundError as e:\n",
+    "            print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "338f5581",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "F1 = {}\n",
+    "for key, value in full_results.items():\n",
+    "    f1 = [0]*20\n",
+    "    for epoch, metrics in value.items():\n",
+    "        f1[epoch] = metrics[\"f1\"]\n",
+    "    F1[key] = f1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2db95329",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.DataFrame(F1)\n",
+    "\n",
+    "df.columns = pd.MultiIndex.from_tuples(\n",
+    "    df.columns,\n",
+    "    names=[\"rank\", \"train_epoch\"]\n",
+    ")\n",
+    "\n",
+    "df.index.name = \"post_epoch\"\n",
+    "df.to_csv(\"results/qwen2.5-1.5b-instruct/moe/popqa/total.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "388436b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.styles import Font\n",
+    "\n",
+    "# Build DataFrame\n",
+    "df = pd.DataFrame(F1)\n",
+    "\n",
+    "df.columns = pd.MultiIndex.from_tuples(\n",
+    "    df.columns,\n",
+    "    names=[\"rank\", \"train_epoch\"]\n",
+    ")\n",
+    "df.index.name = \"post_epoch\"\n",
+    "\n",
+    "# Output path\n",
+    "out_path = Path(\"results/qwen2.5-1.5b-instruct/moe/popqa/total.xlsx\")\n",
+    "out_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# Write DataFrame\n",
+    "df.to_excel(out_path)\n",
+    "\n",
+    "# Open workbook for formatting\n",
+    "wb = load_workbook(out_path)\n",
+    "ws = wb.active\n",
+    "bold = Font(bold=True)\n",
+    "\n",
+    "# ---- IMPORTANT: exact data region ----\n",
+    "DATA_START_ROW = 3   # first metric row\n",
+    "DATA_START_COL = 2   # first metric column\n",
+    "\n",
+    "n_rows, n_cols = df.shape\n",
+    "\n",
+    "for col_idx in range(n_cols):\n",
+    "    col_values = df.iloc[:, col_idx]\n",
+    "    max_val = col_values.max()\n",
+    "\n",
+    "    for row_idx, val in enumerate(col_values):\n",
+    "        if val == max_val:\n",
+    "            ws.cell(\n",
+    "                row=DATA_START_ROW + row_idx,\n",
+    "                column=DATA_START_COL + col_idx\n",
+    "            ).font = bold\n",
+    "\n",
+    "wb.save(out_path)\n"
    ]
   }
  ],
@@ -340,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
