--- a/collect_metrics.ipynb
+++ b/collect_metrics.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "bc77b082",
    "metadata": {},
    "outputs": [
@@ -201,14 +201,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Errno 2] No such file or directory: '/scratch/doluk/Compact-Interference-PRAG/output/moe/qwen2.5-1.5b-instruct/rank=16_alpha=32/popqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/post_train_epochs=20/lr=0.0003_direct/prag/total/result.txt'\n"
+      "[Errno 2] No such file or directory: '/scratch/doluk/Compact-Interference-PRAG/output/moe/qwen2.5-1.5b-instruct/rank=16_alpha=32/popqa/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/post_train_epochs=20/lr=0.0003_direct/prag/total/result.txt'\n",
+      "[Errno 2] No such file or directory: '/scratch/doluk/Compact-Interference-PRAG/output/moe/qwen2.5-1.5b-instruct/rank=8_alpha=32/complexwebquestions/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/post_train_epochs=20/lr=0.0003_direct/prag/total/result.txt'\n",
+      "[Errno 2] No such file or directory: '/scratch/doluk/Compact-Interference-PRAG/output/moe/qwen2.5-1.5b-instruct/rank=16_alpha=32/complexwebquestions/lr=0.0003_epoch=2_direct/aug_model=qwen2.5-1.5b-instruct/post_train_epochs=20/lr=0.0003_direct/prag/total/result.txt'\n",
+      "[Errno 2] No such file or directory: '/scratch/doluk/Compact-Interference-PRAG/output/moe/qwen2.5-1.5b-instruct/rank=16_alpha=32/complexwebquestions/lr=0.0003_epoch=4_direct/aug_model=qwen2.5-1.5b-instruct/post_train_epochs=20/lr=0.0003_direct/prag/total/result.txt'\n"
      ]
     }
    ],
    "source": [
     "import re\n",
     "from pathlib import Path\n",
-    "\n",
+    "import json\n",
     "def parse_result_txt(result_path: Path):\n",
     "    text = result_path.read_text()\n",
     "    results = {}\n",
@@ -235,107 +238,70 @@
     "    return results\n",
     "from pathlib import Path\n",
     "\n",
-    "full_results = {}\n",
-    "for lora_rank in [2, 4, 8, 16]:\n",
-    "    for epoch in [2, 4]:\n",
-    "        result_path = Path(\n",
-    "            \"/scratch/doluk/Compact-Interference-PRAG/output/moe/qwen2.5-1.5b-instruct/\"\n",
-    "            f\"rank={lora_rank}_alpha=32/popqa/lr=0.0003_epoch={epoch}_direct/\"\n",
-    "            \"aug_model=qwen2.5-1.5b-instruct/post_train_epochs=20/\"\n",
-    "            \"lr=0.0003_direct/prag/total/result.txt\"\n",
-    "        )\n",
-    "        try:\n",
-    "            results = parse_result_txt(result_path)\n",
-    "            full_results[(lora_rank, epoch)]=results\n",
-    "        except FileNotFoundError as e:\n",
-    "            print(e)"
+    "full_results = {\"popqa\": {}, \"complexwebquestions\": {}}\n",
+    "pred_count = {\"popqa\": {}, \"complexwebquestions\": {}}\n",
+    "for dataset, results_records in full_results.items():\n",
+    "    for lora_rank in [2, 4, 8, 16]:\n",
+    "        for epoch in [2, 4]:\n",
+    "            output_dir = Path(\n",
+    "                \"/scratch/doluk/Compact-Interference-PRAG/output/moe/qwen2.5-1.5b-instruct/\"\n",
+    "                f\"rank={lora_rank}_alpha=32/{dataset}/lr=0.0003_epoch={epoch}_direct/\"\n",
+    "                \"aug_model=qwen2.5-1.5b-instruct/post_train_epochs=20/\"\n",
+    "                \"lr=0.0003_direct/prag/total/\"\n",
+    "            )\n",
+    "            result_path = Path(os.path.join(output_dir, \"result.txt\"))\n",
+    "            predict_path = Path(os.path.join(output_dir, \"predict.json\"))\n",
+    "            try:\n",
+    "                results = parse_result_txt(result_path)\n",
+    "                full_results[dataset][(lora_rank, epoch)]=results\n",
+    "                with open(predict_path, \"r\") as f:\n",
+    "                    predict = json.load(f)\n",
+    "                pred_count[dataset][(lora_rank, epoch)] = len(predict)\n",
+    "            except FileNotFoundError as e:\n",
+    "                print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "338f5581",
    "metadata": {},
    "outputs": [],
    "source": [
     "F1 = {}\n",
-    "for key, value in full_results.items():\n",
-    "    f1 = [0]*20\n",
-    "    for epoch, metrics in value.items():\n",
-    "        f1[epoch] = metrics[\"f1\"]\n",
-    "    F1[key] = f1"
+    "for dataset, results_records in full_results.items():\n",
+    "    F1[dataset] = {}\n",
+    "    for key, value in results_records.items():\n",
+    "        pred_count_key = pred_count[dataset][key]\n",
+    "        f1 = [0]*20\n",
+    "        for epoch, metrics in value.items():\n",
+    "            f1[epoch] = metrics[\"f1\"]\n",
+    "        if  pred_count_key > 0 and pred_count_key < 300:\n",
+    "            F1[dataset][key] = [-e for e in f1]\n",
+    "        else:\n",
+    "            F1[dataset][key] = f1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "2db95329",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.DataFrame(F1)\n",
+    "import os\n",
+    "for dataset, f1 in F1.items():\n",
+    "    df = pd.DataFrame(f1)\n",
     "\n",
-    "df.columns = pd.MultiIndex.from_tuples(\n",
-    "    df.columns,\n",
-    "    names=[\"rank\", \"train_epoch\"]\n",
-    ")\n",
+    "    df.columns = pd.MultiIndex.from_tuples(\n",
+    "        df.columns,\n",
+    "        names=[\"rank\", \"train_epoch\"]\n",
+    "    )\n",
     "\n",
-    "df.index.name = \"post_epoch\"\n",
-    "df.to_csv(\"results/qwen2.5-1.5b-instruct/moe/popqa/total.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "388436b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from pathlib import Path\n",
-    "from openpyxl import load_workbook\n",
-    "from openpyxl.styles import Font\n",
-    "\n",
-    "# Build DataFrame\n",
-    "df = pd.DataFrame(F1)\n",
-    "\n",
-    "df.columns = pd.MultiIndex.from_tuples(\n",
-    "    df.columns,\n",
-    "    names=[\"rank\", \"train_epoch\"]\n",
-    ")\n",
-    "df.index.name = \"post_epoch\"\n",
-    "\n",
-    "# Output path\n",
-    "out_path = Path(\"results/qwen2.5-1.5b-instruct/moe/popqa/total.xlsx\")\n",
-    "out_path.parent.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "# Write DataFrame\n",
-    "df.to_excel(out_path)\n",
-    "\n",
-    "# Open workbook for formatting\n",
-    "wb = load_workbook(out_path)\n",
-    "ws = wb.active\n",
-    "bold = Font(bold=True)\n",
-    "\n",
-    "# ---- IMPORTANT: exact data region ----\n",
-    "DATA_START_ROW = 3   # first metric row\n",
-    "DATA_START_COL = 2   # first metric column\n",
-    "\n",
-    "n_rows, n_cols = df.shape\n",
-    "\n",
-    "for col_idx in range(n_cols):\n",
-    "    col_values = df.iloc[:, col_idx]\n",
-    "    max_val = col_values.max()\n",
-    "\n",
-    "    for row_idx, val in enumerate(col_values):\n",
-    "        if val == max_val:\n",
-    "            ws.cell(\n",
-    "                row=DATA_START_ROW + row_idx,\n",
-    "                column=DATA_START_COL + col_idx\n",
-    "            ).font = bold\n",
-    "\n",
-    "wb.save(out_path)\n"
+    "    df.index.name = \"post_epoch\"\n",
+    "    os.makedirs(f\"results/qwen2.5-1.5b-instruct/moe/{dataset}/\", exist_ok=True)\n",
+    "    df.to_csv(f\"results/qwen2.5-1.5b-instruct/moe/{dataset}/total.csv\")"
    ]
   }
  ],
