--- a/moe_experiment.ipynb
+++ b/moe_experiment.ipynb
@@ -406,9 +406,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (prag)",
+   "display_name": "prag",
    "language": "python",
-   "name": "prag"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -420,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.19"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
